# vector-renderer

./: .gitignore  ChangeLog.md  README.md  stack.yaml  vector-renderer.cabal
app/: ConvexHull.hs  Main.hs  Test.hs
src/Cairo/Canvas/: Ipe.hs  Primitives.hs
src/Data/: Camera.hs
src/GeomViewer/: Mode.hs  Viewport.hs
src/GeomViewer/Viewport/: Dynamic.hs
src/GeomViewer/Viewport/Dynamic/: SDL.hs
src/SDL/: GeometryUtil.hs  Util.hs
src/UI/: Bootstrap.hs  Canvas.hs  Layout.hs  Viewport.hs
src/VectorRenderer/: Button.hs  ConvexHull.hs  GeomViewer.hs  Import.hs  Layout.hs  Main.hs  NestedViewport.hs  Options.hs  PannableViewport.hs  Project.hs  ReflexSDLRenderer.hs  RenderCanvas.hs  RenderUtil.hs  SubdivViewer.hs  Viewport.hs
test/VectorRenderer/: CameraSpec.hs
