cabal-version:      2.4
name:               vector-renderer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Frank Staals
maintainer:         frank@fstaals.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    ChangeLog.md
    README.md

library
  exposed-modules: Data.Camera
                   VectorRenderer.Main
                   VectorRenderer.Import
                   VectorRenderer.RenderCanvas
                   VectorRenderer.RenderUtil

  hs-source-dirs: src

  build-depends:      base                    ^>= 4.14.1.0
                    , hgeometry               ^>= 0.12
                    , hgeometry-combinatorial ^>= 0.12
                    , hgeometry-ipe           ^>= 0.12
                    , reflex-sdl2             ^>= 0.3.0.2
                    , data-default            ^>= 0.7
                    , lens                    ^>= 4.19
                    , linear                  ^>= 1.21
                    , vinyl                   ^>= 0.13
                    , text                    ^>= 1.2
                    , sdl2                    ^>= 2.5
                    , sdl2-cairo              ^>= 0.2
                    , cairo-canvas            ^>= 0.1.0.0



  default-language:    Haskell2010

  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , TupleSections
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , DeriveGeneric


                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses

executable vector-renderer
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , vector-renderer
    hs-source-dirs:   app
    default-language: Haskell2010
