cabal-version:      2.4
name:               vector-renderer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Frank Staals
maintainer:         frank@fstaals.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    ChangeLog.md
    README.md

common my-default-extensions
  default-language:    Haskell2010

  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , TupleSections
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , DeriveGeneric


                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses


library
  import: my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  exposed-modules:
    Data.Camera
    VectorRenderer.Main
    VectorRenderer.Import
    VectorRenderer.RenderCanvas
    -- VectorRenderer.RenderUtil
    VectorRenderer.ReflexSDLRenderer

    VectorRenderer.Viewport
    VectorRenderer.PannableViewport


    SDL.Util
    SDL.GeometryUtil
    VectorRenderer.ConvexHull
    VectorRenderer.SubdivViewer

    VectorRenderer.NestedViewport

    Algorithms.Geometry.HiddenSurfaceRemoval.HiddenSurfaceRemoval

    VectorRenderer.Layout

  hs-source-dirs: src

  build-depends:      base                    >= 4.14.1.0
                    , cairo-canvas            >= 0.1.0.0
                    , colour                  >= 2.3
                    , data-default            >= 0.7
                    , hgeometry               >= 0.13
                    , hgeometry-combinatorial >= 0.13
                    , hgeometry-ipe           >= 0.13
                    , lens                    >= 4.19
                    , linear                  >= 1.21
                    , mtl                     >= 2.2.2
                    , reflex                  >= 0.8
                    , reflex-sdl2             >= 0.3
                    , sdl2                    >= 2.5
                    , sdl2-cairo              >= 0.2
                    , text                    >= 1.2
                    , transformers            >= 0.5
                    , vinyl                   >= 0.13
                    , vector
                    , cairo
                    , random


executable vector-renderer
  import: my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  main-is:
    Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- other-extensions:
  build-depends:    base
                  , vector-renderer

  hs-source-dirs:   app
